fix: footer spacing

--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -11,7 +11,6 @@ footer {
 
   .footer-container {
     padding: 1em;
-    padding-bottom: 2em;
     display: flex;
     flex-direction: column;
     gap: 0.5em;
@@ -37,8 +36,12 @@ footer {
       }
 
       h3 {
-        margin: 1em 0;
+        margin: .3em 0;
         font-family: $font-bold;
+      }
+
+      ul {
+        padding: 0;
       }
 
       a {
@@ -46,6 +49,7 @@ footer {
       }
 
       p {
+        margin: 0;
         padding: 0.5em 0;
         @media (min-width: 50rem) {
           padding: 0.5em 1.5em;
